--- a/public/route.html
+++ b/public/route.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>BusDating</title>
@@ -12,20 +13,22 @@
     <link href="styles/route.css" rel="stylesheet" />
 
     <script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
-	<script defer src="./scripts/db.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+    <script defer src="./scripts/db.js"></script>
     <script defer src="./scripts/h2.js"></script>
     <script defer src="./scripts/normstn.js"></script>
     <script defer src="./scripts/route.js"></script>
 </head>
+
 <body>
     <header class="header -search">
         <div class="header-text">
             <div class="headings">
                 <h1 id="route" class="title"></h1>
                 <span id="swap" class="subtitle">
-                    <span class="material-icons">import_export</span><span id="starting"></span>
-                    <span class="east-icon material-icons">east</span><span id="ending"></span>
+                    <span id="starting"></span>
+                    <span class="east-icon material-icons">east</span>
+                    <span id="ending"></span>
                 </span>
             </div>
             <a href="./search.html" class="back">
@@ -44,4 +47,5 @@
         </section>
     </main>
 </body>
+
 </html>
