station page header

--- a/public/station.html
+++ b/public/station.html
@@ -32,22 +32,23 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="header-text">
-      <div class="headings">
-        <div class="star">
-          <span id="star" class="star-icon material-icons">star_border</span>
+  <main class="page -station">
+    <header></header>
+    <!-- <header class="header">
+      <div class="header-text">
+        <div class="headings">
+          <div class="star">
+            <span id="star" class="star-icon material-icons">star_border</span>
+          </div>
+          <h1 id="name" class="title"></h1>
+          <span id="routeAndId" class="subtitle"></span>
         </div>
-        <h1 id="name" class="title"></h1>
-        <span id="routeAndId" class="subtitle"></span>
+        <div class="back" onclick="window.history.back()">
+          <span class="material-icons">keyboard_arrow_left</span> <span id="routeId"></span>
+        </div>
       </div>
-      <div class="back" onclick="window.history.back()">
-        <span class="material-icons">keyboard_arrow_left</span> <span id="routeId"></span>
-      </div>
-    </div>
-  </header>
-  <main class="page">
-    <div class="route">
+    </header>
+    <div class="station-map">
       <div id="currentName" class="this-station">CENTRAL BLVD E</div>
       <div class="station-table">
         <div class="station -before"></div>
@@ -58,7 +59,7 @@
         <div id="before" class="before">METROTOWN</div>
         <div id="after" class="after">WAVERLEY AVE</div>
       </div>
-    </div>
+    </div> -->
     <div id="map"></div>
     <div class="info-title">
       TRANSIT INFORMATION
