station style tweaks and stopmap fix

--- a/public/station.html
+++ b/public/station.html
@@ -32,32 +32,7 @@
 </head>
 
 <body>
-  <main class="page -station">
-    <div class="info-title">
-      TRANSIT INFORMATION
-      <div class="report-button" onclick="window.location.assign('report.html')">Update <span
-          class="update-icon material-icons">keyboard_arrow_right</span></div>
-    </div>
-    <div class="info-content">
-      <div class="statuses">
-        <div class="seating">SEATING
-          <div class="status -seating -green">Stand only</div>
-        </div>
-        <div class="timing">TIMING
-          <div class="status -timing -green">On time</div>
-        </div>
-        <div class="mask">MASK USAGE
-          <div class="status -mask -green">Complete</div>
-        </div>
-      </div>
-    </div>
-    <div class="message-title">
-      RECENT MESSAGES
-    </div>
-    <div id="recentmsg" class="message-content">
-    </div>
-    <button id="join" class="button"></button>
-  </main>
+  <main></main>
 </body>
 
 </html>
