--- a/public/station.html
+++ b/public/station.html
@@ -25,6 +25,7 @@
   <script defer src="./scripts/h2.js"></script>
   <script defer src="./scripts/db.js"></script>
   <script defer src="./scripts/timediff.js"></script>
+  <script defer src="./scripts/getrts.js"></script>
   <script defer src="./scripts/getstns.js"></script>
   <script defer src="./scripts/normname.js"></script>
   <script defer src="./scripts/fmtstn.js"></script>
