--- a/public/report.html
+++ b/public/report.html
@@ -16,9 +16,10 @@
   <script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
   <script defer src="./scripts/db.js"></script>
   <script defer src="./scripts/h2.js"></script>
+  <script defer src="./scripts/getrts.js"></script>
+  <script defer src="./scripts/getstns.js"></script>
   <script defer src="./scripts/normname.js"></script>
   <script defer src="./scripts/fmtstn.js"></script>
-  <script defer src="./scripts/getstns.js"></script>
   <script defer src="./scripts/report.js"></script>
 </head>
 
