--- a/public/search.html
+++ b/public/search.html
@@ -13,8 +13,8 @@
 
 	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
 	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
-	<script defer src="./scripts/db.js"></script>
 	<script defer src="./scripts/h2.js"></script>
+  <script defer src="./scripts/getrts.js"></script>
 	<script defer src="./scripts/search.js"></script>
 
 </head>
