fix db read error

--- a/public/route.html
+++ b/public/route.html
@@ -26,6 +26,8 @@
   <script defer src="./scripts/getstns.js"></script>
   <script defer src="./scripts/normname.js"></script>
   <script defer src="./scripts/fmtstn.js"></script>
+  <script defer src="./scripts/keywords.js"></script>
+  <script defer src="./scripts/filter.js"></script>
   <script defer src="./scripts/leaflet.js"></script>
   <script defer src="./scripts/route.js"></script>
 </head>
