station and chat header links

--- a/public/chat.html
+++ b/public/chat.html
@@ -24,16 +24,7 @@
 
 <body>
   <main class="page -chat">
-    <header class="header header-text -color -secondary">
-      <div class="title-row">
-        <h1 class="title -small">Chat</h1>
-        <button class="back" onclick="window.history.back()">
-          <span class="material-icons">keyboard_arrow_left</span>
-          <span class="back-text">Station</span>
-        </button>
-      </div>
-      <span class="subtitle">Route 0</span>
-    </header>
+    <header></header>
     <div class="page-content">
       <div class="messages">
         <div class="message-groups"></div>
