--- a/public/login.html
+++ b/public/login.html
@@ -2,23 +2,25 @@
 <html lang="en" dir="ltr">
 
 <head>
-	<meta charset="utf-8">
-	<title>BusDating - Login</title>
+  <meta charset="utf-8">
+  <title>Riderly - Login</title>
 
-	<meta name="description" content="bus dating">
-	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1"/>
+  <meta name="description" content="An app for connecting transit riders">
+  <meta name="author" content="dimuzone, semibran, zzzbnbzzz">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
 
-	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
 
-	<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
-	<script defer src="./scripts/db.js"></script>
-	<script defer src="./scripts/login.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+  <script defer src="./scripts/db.js"></script>
+  <script defer src="./scripts/login.js"></script>
 </head>
+
 <body>
-	<main></main>
+  <main></main>
 </body>
+
 </html>
