--- a/public/report.html
+++ b/public/report.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BusDating - Bus Profile</title>
+  <title>Riderly - Report changes</title>
 
-  <meta name="description" content="bus dating">
+  <meta name="description" content="An app for connecting transit riders">
   <meta name="author" content="dimuzone, semibran, zzzbnbzzz">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
