x button on search and filter

--- a/public/search.html
+++ b/public/search.html
@@ -39,6 +39,7 @@
     <div class="search-bar">
       <span class="icon -search material-icons">search</span>
       <input class="search-input" type="text" placeholder="Search routes" name="search" autocomplete="off" autofocus />
+      <span class="search-close icon -close material-icons">close</span>
     </div>
     <div class="search-results"></div>
   </div>
