comments for search page

--- a/public/chat.html
+++ b/public/chat.html
@@ -17,6 +17,7 @@
   <script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
   <script defer src="./scripts/h2.js"></script>
   <script defer src="./scripts/db.js"></script>
+  <script defer src="./scripts/normname.js"></script>
   <script defer src="./scripts/getrts.js"></script>
   <script defer src="./scripts/getstns.js"></script>
   <script defer src="./scripts/chat.js"></script>
